--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 <body>
     <h1>Välkommen till min webbsida!</h1>
     <p>Det här är en enkel webbsida skapad med GitHub Pages.</p>
-    <p>Jag hoppas du gillar den!</p>
+    <p>Du kommer att gilla den!</p>
 </body>
 </html>
