--- a/index.html
+++ b/index.html
@@ -3,25 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Min lite mer än Enkla Webbplats</title>
+    <title>En Enkel Fråga</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-align: center;
-            margin-top: 50px;
-            background-color: #f0f0f0;
-        }
-        h1 {
+            margin-top: 80px;
+            background-color: #e9f5f5; /* Ljusblågrön bakgrund */
             color: #333;
         }
-        p {
-            color: #666;
+        .container {
+            background-color: #ffffff;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            display: inline-block; /* Gör att containern bara är så bred som innehållet */
+            max-width: 500px; /* Maxbredd för containern */
+        }
+        label {
+            display: block; /* Placerar frågan på en egen rad */
+            margin-bottom: 15px;
+            font-size: 1.5em; /* Större text för frågan */
+            font-weight: bold;
+            color: #2a7a7a; /* Mörk turkos text */
+        }
+        input[type="text"] {
+            width: 80%; /* Bredden på inmatningsfältet */
+            padding: 12px 15px;
+            margin-bottom: 20px;
+            border: 2px solid #88cccc; /* Turkos ram */
+            border-radius: 6px;
+            font-size: 1.1em;
+            box-sizing: border-box; /* Inkluderar padding och ram i bredden */
+        }
+        input[type="text"]:focus {
+            outline: none;
+            border-color: #3a9999; /* Mörkare turkos vid fokus */
+            box-shadow: 0 0 8px rgba(58, 153, 153, 0.4);
+        }
+        button {
+            background-color: #4CAF50; /* Grön knapp */
+            color: white;
+            padding: 14px 25px;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 1.1em;
+            transition: background-color 0.3s ease; /* Mjuk övergång vid hovring */
+        }
+        button:hover {
+            background-color: #45a049; /* Mörkare grön vid hovring */
+        }
+        #responseMessage {
+            margin-top: 25px;
+            font-size: 1.2em;
+            color: #007bff; /* Blå färg för meddelandet */
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <h1>Välkommen till min webbsida!</h1>
-    <p>Det här är en enkel webbsida skapad med GitHub Pages.</p>
-    <p>Du kommer att gilla den!</p>
+    <div class="container">
+        <form id="nameForm">
+            <label for="name">1. Vad heter du?</label>
+            <input type="text" id="name" name="name" placeholder="Skriv ditt namn här..." required>
+            <button type="submit">Skicka svar</button>
+        </form>
+        <div id="responseMessage"></div>
+    </div>
+
+    <script>
+        document.getElementById('nameForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Förhindrar att sidan laddas om
+
+            const nameInput = document.getElementById('name');
+            const name = nameInput.value.trim(); // Trimma bort mellanslag i början/slutet
+
+            const responseMessageDiv = document.getElementById('responseMessage');
+
+            if (name) {
+                // Här kan du göra något med namnet, t.ex. visa det på sidan
+                responseMessageDiv.textContent = `Hej, ${name}! Tack för ditt svar.`;
+                nameInput.value = ''; // Rensa inmatningsfältet
+            } else {
+                responseMessageDiv.textContent = "Vänligen skriv in ditt namn.";
+                responseMessageDiv.style.color = "red"; // Gör texten röd vid fel
+            }
+        });
+    </script>
 </body>
 </html>
