--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
 
     <div class="image-container">
-        <img src="PXL_20250511_071152569.jpg" alt="En beskrivande text om bilden">
+        <img src="images/PXL_20250511_071152569.jpg" alt="En beskrivande text om bilden">
         <p class="image-caption">En fin bild från en solig dag.</p>
     </div>
 
